images fixed but thumbnails still wrong size, about to make a big adjustment to the header

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,7 @@
 body {
+}
+
+.hero-space {
     padding-top: 70px;
 }
 
@@ -97,7 +100,7 @@ a:active {
 }
 
 #sidebar a {
-    color: inherit;
+    /*color: inherit;*/
 }
 
 .icon-label {
