--- a/static/css/theme_colors.css
+++ b/static/css/theme_colors.css
@@ -3,6 +3,19 @@
 	color: #eeeeee;	
 }
 
+.hero {
+	background-image: url("../images/hero.jpg");	
+	background-position: center top;
+	background-size: cover;
+	max-height: 0.5%;
+	background-repeat: no-repeat;
+	
+}
+
+.site-title {
+	padding-top: 75px;
+}
+
 .theme-sidebar {
 	background-color: #515d6b;
 	color: #ebebeb;	
@@ -23,6 +36,7 @@
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5), 0 4px 15px 0 rgba(0, 0, 0, 0.12);
     border-radius: 18px;
 	margin: 10px;
+	margin-right: 20px;
 }
 
 .theme-button {
@@ -33,5 +47,10 @@
 }
 
 a {
-	color: #f09042;
+	color: #ffa64d;
 }
+
+a i {
+	color: #ffa64d;
+}
+
